--- a/index.html
+++ b/index.html
@@ -67,45 +67,30 @@
   </nav>
   <!-- / Navbar -->
 
-  <div id="particles-js"></div>
-
-  <div class="uikit-example">
+<div id="particles-js"></div>
+<div class="uikit-example">
   <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden" style="background-image: url('assets/img/photos/tech.png');">
+  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden"
+    style="background-image: url('assets/img/photos/1.png');">
     <div class="container">
       <div class="row justify-content-between">
         <div class="w-100">
-
-          <!-- <div class="col-lg-7 col-xl-6 text-lg-left text-center my-5 mr-xl-5">
-            <h1 class="display-3 font-secondary text-dark font-weight-semibold mb-4">
-              Everything you need to reach awesomeness
-            </h1>
-            <p class="lead text-muted pb-3">
-              Lorem ipsum dolor sit amet, ius virtute suscipit te. Ius prima euismod consequat eu, cu quo alii scriptorem. Oratio aperiam per et, per euismod nominati forensibus cu.
-            </p>
-            <button type="button" class="landing-btn btn btn-lg rounded-pill btn-primary mt-2">
-              <span class="ion ion-logo-apple"></span>&nbsp; Download Now
-            </button>
-          </div> -->
-
           <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
-            <h1 class="display-3 font-weight-bold mb-4">¡Hi! I'm Carlos García.</h1>
+            <h1 class="display-3 font-weight-bold mb-4">¡Hi! I'm Carlos G. Velázquez.</h1>
             <div class="lead opacity-75">
-              Backend programmer analyst with experience in .NET Core, my inbox is always open. If you have any questions or just
-              want to say hello, feel free to contact me to collaborate.
+              "Backend developer with experience in .NET Core. My inbox is always open; if you have any questions or just want to
+              say hello, feel free to contact me to collaborate."
+            </div>
+            <div class="col-12 text-center mt-4">
+              <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
             </div>
           </div>
-          
-          <div class="col-12 text-center">
-            <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
-          </div>
-
         </div>
       </div>
     </div>
   </div>
 </div>
-  <!-- / Header -->
+<!-- / Header -->
 
   <!-- Block -->
   <div id="About" class="landing-block-about bg-body ui-bg-overlay-container">
@@ -115,10 +100,9 @@
         <hr class="landing-separator border-primary mx-auto" />
         <div class="lead">
           <p>
-            ¡Hi! I'm a junior Developer from México, curious and ready to face a new challenge. My passion drives me
-            to be constantly learning and exploring new tools. I enjoy meeting new people, as well as music and sports.
-            I consider myself an autodidact, and I love it to share ideas and knowledge without losing sight of my sight
-            goals.
+            Hi! I'm a junior developer from Mexico, curious and ready to face new challenges. My passion drives me to constantly
+            learn and explore new tools. I enjoy meeting new people, as well as music and sports. I consider myself an autodidact,
+            and I love sharing ideas and knowledge without losing sight of my goals.
           </p>
         </div>
         <div class="lead mb-2">
@@ -207,14 +191,14 @@
       <div class="col-md-10 col-lg-8 col-xl-7 position-relative px-5 mx-auto">
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
-
+  
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
               <div class="ui-customer-review my-3">
-                Basic CRUD .NET
+                Movie Store
               </div>
-
-              <div class="align-items-lg-center">
+  
+              <div class="align-items-lg-center mt-5">
                 <a class="theme-text-dark" href="https://moviesstore.azurewebsites.net/swagger/index.html">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
@@ -227,28 +211,7 @@
                 </a>
               </div>
             </div>
-
-            <div class="swiper-slide h-auto">
-              <img src="assets/img/photos/portfolio.png" class="ui-w-80 rounded-0" alt />
-              <div class="ui-customer-review my-3">
-                My Portfolio
-              </div>
-
-              <div class="align-items-lg-center">
-                <a class="theme-text-dark" href="http://www.carlosdevelopp.ga">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-globe"></i></span>&nbsp; Website
-                  </button>
-                </a>
-                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/carlosdevelopp.github.io">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-git"></i></span>&nbsp; See code
-                  </button>
-                </a>
-              </div>
-
-            </div>
-            
+  
           </div>
         </div>
         <div id="landing-testimonials-slider-next" class="swiper-button-next custom-icon">
