--- a/index.html
+++ b/index.html
@@ -76,10 +76,10 @@
       <div class="row justify-content-between">
         <div class="w-100">
           <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
-            <h1 class="display-3 font-weight-bold mb-4">¡Hi! I'm Carlos G. Velázquez.</h1>
+            <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
             <div class="lead opacity-75">
-              "Backend developer with experience in .NET Core. My inbox is always open; if you have any questions or just want to
-              say hello, feel free to contact me to collaborate."
+              <i class="bi bi-code"></i> "Backend developer with experience in .NET Core. My inbox is always open; if you have any questions or just want to
+              say hello, feel free to contact me to collaborate." <i class="bi bi-code-slash"></i>
             </div>
             <div class="col-12 text-center mt-4">
               <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
@@ -204,7 +204,7 @@
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
-                <a class="align-items-lg-center" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
+                <a class="align-items-lg-center mt-5" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
