--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
   <meta name="description" content="" />
   <meta name="viewport" content="width=device-width,initial-scale=1,user-scalable=no,minimum-scale=1,maximum-scale=1" />
 
-  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900" rel="stylesheet" />
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,500,500i,700,700i,900"
+    rel="stylesheet" />
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link href="https://fonts.googleapis.com/css?family=Barlow:300,400,500,600,700" rel="stylesheet" />
 
@@ -29,13 +30,13 @@
   <link rel="stylesheet" href="assets/css/fonts/styles.css" />
   <!-- Libs -->
   <link rel="stylesheet" href="assets/libs/swiper/swiper.css" />
-  
+
   <script src="assets/js/material-ripple.js"></script>
   <script src="assets/js/layout-helpers.js"></script>
-  
+
   <!-- Core scripts -->
   <script src="assets/js/pace.js"></script>
- 
+
   <!-- Page -->
   <link rel="stylesheet" href="assets/css/portfolio.css">
 </head>
@@ -67,30 +68,31 @@
   </nav>
   <!-- / Navbar -->
 
-<div id="particles-js"></div>
-<div class="uikit-example">
-  <!-- Header -->
-  <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden"
-    style="background-image: url('assets/img/photos/1.png');">
-    <div class="container">
-      <div class="row justify-content-between">
-        <div class="w-100">
-          <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
-            <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
-            <div class="lead opacity-75">
-              <i class="bi bi-code"></i> "Backend developer with experience in .NET Core. My inbox is always open; if you have any questions or just want to
-              say hello, feel free to contact me to collaborate." <i class="bi bi-code-slash"></i>
-            </div>
-            <div class="col-12 text-center mt-4">
-              <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
+  <div id="particles-js"></div>
+  <div class="uikit-example">
+    <!-- Header -->
+    <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden"
+      style="background-image: url('assets/img/photos/1.png');">
+      <div class="container">
+        <div class="row justify-content-between">
+          <div class="w-100">
+            <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
+              <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
+              <div class="lead opacity-75">
+                <i class="bi bi-code"></i> "Backend developer with experience in .NET Core. My inbox is always open; if
+                you have any questions or just want to
+                say hello, feel free to contact me to collaborate." <i class="bi bi-code-slash"></i>
+              </div>
+              <div class="col-12 text-center mt-4">
+                <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
+              </div>
             </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-</div>
-<!-- / Header -->
+  <!-- / Header -->
 
   <!-- Block -->
   <div id="About" class="landing-block-about bg-body ui-bg-overlay-container">
@@ -100,8 +102,10 @@
         <hr class="landing-separator border-primary mx-auto" />
         <div class="lead">
           <p>
-            Hi! I'm a junior developer from Mexico, curious and ready to face new challenges. My passion drives me to constantly
-            learn and explore new tools. I enjoy meeting new people, as well as music and sports. I consider myself an autodidact,
+            Hi! I'm a junior developer from Mexico, curious and ready to face new challenges. My passion drives me to
+            constantly
+            learn and explore new tools. I enjoy meeting new people, as well as music and sports. I consider myself an
+            autodidact,
             and I love sharing ideas and knowledge without losing sight of my goals.
           </p>
         </div>
@@ -140,7 +144,7 @@
                   <img src="assets/img/photos/net.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">.NET</p>
                 </div>
-                <div class="swiper-slide">  
+                <div class="swiper-slide">
                   <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale">
                   <p class="text-center text-tiny font-weight-bold">C Sharp</p>
                 </div>
@@ -191,27 +195,27 @@
       <div class="col-md-10 col-lg-8 col-xl-7 position-relative px-5 mx-auto">
         <div class="swiper-container w-auto text-center mx-3" id="landing-testimonials-slider">
           <div class="swiper-wrapper align-items-stretch">
-  
+
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
               <div class="ui-customer-review my-3">
                 Movie Store
               </div>
-  
+
               <div class="align-items-lg-center mt-5">
                 <a class="theme-text-dark" href="https://moviesstore.azurewebsites.net/swagger/index.html">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
-                <a class="align-items-lg-center mt-5" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
+                <a class="align-items-lg-center mt-4" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
                 </a>
               </div>
             </div>
-  
+
           </div>
         </div>
         <div id="landing-testimonials-slider-next" class="swiper-button-next custom-icon">
