--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <div class="mt-5">
           <button type="button" class="landing-btn btn btn-lg rounded-pill btn-primary">
             <i class="bi bi-file-earmark-arrow-down">
-              <a class="theme-text-white" href="./assets/docs/Carlos_García_CV_2024.pdf" download="CV">
+              <a class="theme-text-white" href="./assets/docs/Carlos_García_CV_2024.pdf" download="Carlos_García_CV_2024">
                 Download CV
               </a>
             </i>
