--- a/index.html
+++ b/index.html
@@ -113,17 +113,17 @@
           <span>Let's keep in touch through my social networks</span>
         </div>
         <div class="mt-5">
-          <button type="button" class="landing-btn btn btn-lg rounded-pill btn-primary">
-            <i class="bi bi-file-earmark-arrow-down">
-              <a class="theme-text-white" href="./assets/docs/Carlos_García_CV_2024.pdf" download="Carlos_García_CV_2024">
-                Download CV
-              </a>
-            </i>
-          </button>
+          <i>
+            <a class="bi bi-file-earmark-arrow-down btn btn-outline-primary btn-lg rounded-pill"
+              href="./assets/docs/Carlos_García_CV_2024.pdf" download="Carlos_García_CV_2024">
+              Download CV
+            </a>
+          </i>
         </div>
       </div>
     </div>
-  </div>
+    </div>
+    </div>
   <!-- / Block -->
 
   <!-- Block -->
