--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
           </p>
         </div>
         <div class="lead mb-2">
-          <span>Let's keep in touch through my social networks</span>
+          <span>Let's keep in touch through my social networks.</span>
         </div>
         <div class="mt-5">
           <i>
