--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
   </nav>
   <!-- / Navbar -->
 
+  <!-- Animation -->
   <div id="particles-js"></div>
   <div class="uikit-example">
     <!-- Header -->
@@ -246,10 +247,6 @@
           </p>
         </div>
         <div class="social">
-          <a href="https://twitter.com/CarlosDevelopp" target="_blank">
-            <i id="twitter" class="bi bi-twitter"></i>
-          </a>
-
           <a href="https://www.instagram.com/carlos_dream._/?hl=es-la" target="_blank">
             <i id="instagram" class="bi bi-instagram"></i>
           </a>
