--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
 
   <!-- Block -->
   <div id="Proyects" class="landing-block-proyect ui-bg-cover ui-bg-fixed ui-bg-overlay-container text-white"
-    style="background-image: url(assets/img/photos/tech1.png)">
+    style="background-image: url(assets/img/photos/2.png)">
     <div class="ui-bg-overlay bg-dark opacity-75"></div>
     <div class="container px-3">
       <div class="text-center text-tiny font-weight-bold opacity-50 mb-3">
