--- a/index.html
+++ b/index.html
@@ -79,11 +79,13 @@
           <div class="w-100">
             <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
               <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
-              <div class="lead opacity-75">
-                <i class="bi bi-code"></i> "Backend developer with experience in .NET Core. My inbox is always open; if
+
+              <figcaption class="blockquote-footer text-center">
+                Backend developer with experience in .NET. My inbox is always open; if
                 you have any questions or just want to
-                say hello, feel free to contact me to collaborate." <i class="bi bi-code-slash"></i>
-              </div>
+                say hello, feel free to contact me to collaborate. 
+              </figcaption>
+
               <div class="col-12 text-center mt-4">
                 <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
               </div>
