--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
       <hr class="mb-4" />
       <div class="copyrights">
         <p class="mb-0 text-muted py-2">
-          2025 © All rights reserved.<br />Developer with the
+          2025 © Developer with the
           <i class="cor bi-heart-pulse-fill"></i> by Carlos García
         </p>
       </div>
