--- a/index.html
+++ b/index.html
@@ -73,19 +73,19 @@
   <div class="uikit-example">
     <!-- Header -->
     <div id="Home" class="jumbotron ui-hero ui-mh-100vh ui-bg-cover ui-bg-fixed text-white overflow-hidden"
-      style="background-image: url('assets/img/photos/1.png');">
+      style="background-image: url('assets/img/photos/1.png')">
       <div class="container">
         <div class="row justify-content-between">
           <div class="w-100">
             <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
               <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
-
+  
               <figcaption class="blockquote-footer text-center">
                 Backend developer with experience in .NET. My inbox is always open; if
                 you have any questions or just want to
-                say hello, feel free to contact me to collaborate. 
+                say hello, feel free to contact me to collaborate.
               </figcaption>
-
+  
               <div class="col-12 text-center mt-4">
                 <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
               </div>
