--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="mt-5">
           <i>
             <a class="bi bi-file-earmark-arrow-down btn btn-outline-primary btn-lg rounded-pill"
-              href="./assets/docs/Carlos_García_CV_2024.pdf" download="Carlos_García_CV_2024">
+              href="./assets/docs/Carlos_García_CV.pdf" download="Carlos_García_CV_2024">
               Download CV
             </a>
           </i>
@@ -151,6 +151,10 @@
                   <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale">
                   <p class="text-center text-tiny font-weight-bold">C Sharp</p>
                 </div>
+                 <div class="swiper-slide">
+                    <img src="assets/img/photos/bootstrap.png" class="img-fluid hoverable ui-img-grayscale">
+                    <p class="text-center text-tiny font-weight-bold">bootstrap</p>
+                  </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/git.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">Git</p>
@@ -170,10 +174,10 @@
               </div>
             </div>
             <div id="landing-logos-slider-next" class="swiper-button-next custom-icon">
-              <i class="lnr lnr-chevron-right text-lighter text-tiny"></i>
+              <i class="lnr lnr-chevron-right theme-text-dark text-tiny"></i>
             </div>
             <div id="landing-logos-slider-prev" class="swiper-button-prev custom-icon">
-              <i class="lnr lnr-chevron-left text-lighter text-tiny"></i>
+              <i class="lnr lnr-chevron-left theme-text-dark text-tiny"></i>
             </div>
           </div>
         </div>
@@ -202,16 +206,18 @@
             <div class="swiper-slide h-auto">
               <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
               <div class="ui-customer-review my-3">
-                Movie Store
+                <span class="text-warning">
+                  <i class="bi bi-tools"></i> In Progress
+                </span>
               </div>
 
               <div class="align-items-lg-center mt-5">
-                <a class="theme-text-dark" href="https://moviesstore.azurewebsites.net/swagger/index.html">
+                <a class="theme-text-dark" href="">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
                 </a>
-                <a class="align-items-lg-center mt-4" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
+                <a class="align-items-lg-center mt-4" href="">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-git"></i></span>&nbsp; See code
                   </button>
@@ -255,15 +261,12 @@
           <a href="https://github.com/Carlosdevelopp" target="_blank">
             <i id="github" class="bi bi-github"></i>
           </a>
-          <a href="https://www.instagram.com/carlos_dream._/?hl=es-la" target="_blank">
-            <i id="instagram" class="bi bi-instagram"></i>
-          </a>
         </div>
       </div>
       <hr class="mb-4" />
       <div class="copyrights">
         <p class="mb-0 text-muted py-2">
-          2025 © Developer with the
+          2026 © Developer with the
           <i class="cor bi-heart-pulse-fill"></i> by Carlos García
         </p>
       </div>
