--- a/index.html
+++ b/index.html
@@ -79,13 +79,13 @@
           <div class="w-100">
             <div class="col-md-11 col-lg-8 col-xl-7 text-lg-left text-center my-5 mx-auto">
               <h1 class="display-3 font-weight-bold mb-4"></i> ¡Hi! I'm Carlos G. Velázquez. </h1>
-  
+
               <figcaption class="blockquote-footer text-center">
                 Backend developer with experience in .NET. My inbox is always open; if
                 you have any questions or just want to
                 say hello, feel free to contact me to collaborate.
               </figcaption>
-  
+
               <div class="col-12 text-center mt-4">
                 <a class="btn btn-lg btn-outline-white" href="#About"><strong>About me </strong></a>
               </div>
@@ -125,8 +125,8 @@
         </div>
       </div>
     </div>
-    </div>
-    </div>
+  </div>
+  </div>
   <!-- / Block -->
 
   <!-- Block -->
@@ -151,10 +151,10 @@
                   <img src="assets/img/photos/csharp.png" class="img-fluid hoverable ui-img-grayscale">
                   <p class="text-center text-tiny font-weight-bold">C Sharp</p>
                 </div>
-                 <div class="swiper-slide">
-                    <img src="assets/img/photos/bootstrap.png" class="img-fluid hoverable ui-img-grayscale">
-                    <p class="text-center text-tiny font-weight-bold">bootstrap</p>
-                  </div>
+                <div class="swiper-slide">
+                  <img src="assets/img/photos/bootstrap.png" class="img-fluid hoverable ui-img-grayscale">
+                  <p class="text-center text-tiny font-weight-bold">bootstrap</p>
+                </div>
                 <div class="swiper-slide">
                   <img src="assets/img/photos/git.png" class="img-fluid hoverable ui-img-grayscale" alt />
                   <p class="text-center text-tiny font-weight-bold">Git</p>
@@ -207,34 +207,54 @@
               <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
               <div class="ui-customer-review my-3">
                 <span class="text-warning">
-                  <i class="bi bi-tools"></i> In Progress
+                  <i class="bi bi-tools"></i> Agenda In Progress
                 </span>
               </div>
-
+              <!-- 
               <div class="align-items-lg-center mt-5">
                 <a class="theme-text-dark" href="">
                   <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
                     <span><i class="bi bi-globe"></i></span>&nbsp; Website
                   </button>
-                </a>
-                <a class="align-items-lg-center mt-4" href="">
-                  <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
-                    <span><i class="bi bi-git"></i></span>&nbsp; See code
-                  </button>
-                </a>
-              </div>
+                </a> -->
+              <a class="align-items-lg-center mt-4" href="https://github.com/Carlosdevelopp/agenda-efcore">
+                <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                  <span><i class="bi bi-git"></i></span>&nbsp; See code
+                </button>
+              </a>
             </div>
-
+            <div class="swiper-slide h-auto">
+              <img src="assets/img/photos/crud.png" class="ui-w-80" alt />
+              <div class="ui-customer-review my-3">
+                <span class="text-warning">
+                  <i class="bi bi-tools"></i> Api In Progress
+                </span>
+              </div>
+              <!-- 
+              div class="align-items-lg-center mt-5">
+              <a class="theme-text-dark" href="">
+                 <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                  <span><i class="bi bi-globe"></i></span>&nbsp; Website
+                </button>
+              </a> -->
+              <a class="align-items-lg-center mt-4" href="https://github.com/Carlosdevelopp/CRUD_Movies_Store">
+                <button type="button" class="landing-btn btn btn-lg rounded-pill btn-outline-white">
+                  <span><i class="bi bi-git"></i></span>&nbsp; See code
+                </button>
+              </a>
+            </div>
           </div>
-        </div>
-        <div id="landing-testimonials-slider-next" class="swiper-button-next custom-icon">
-          <i class="lnr lnr-chevron-right text-lighter"></i>
-        </div>
-        <div id="landing-testimonials-slider-prev" class="swiper-button-prev custom-icon">
-          <i class="lnr lnr-chevron-left text-lighter"></i>
+
         </div>
       </div>
+      <div id="landing-testimonials-slider-next" class="swiper-button-next custom-icon">
+        <i class="lnr lnr-chevron-right text-lighter"></i>
+      </div>
+      <div id="landing-testimonials-slider-prev" class="swiper-button-prev custom-icon">
+        <i class="lnr lnr-chevron-left text-lighter"></i>
+      </div>
     </div>
+  </div>
   </div>
   <!-- / Block -->
 
