--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <div class="mt-5">
           <i>
             <a class="bi bi-file-earmark-arrow-down btn btn-outline-primary btn-lg rounded-pill"
-              href="./assets/docs/Carlos_García_CV.pdf" download="Carlos_García_CV_2024">
+              href="./assets/docs/Carlos_García_CV.pdf" download="Carlos_García_CV">
               Download CV
             </a>
           </i>
